GNOME Bugzilla – Bug 694016
Terminal server segfaults on clicking 'New Profile…' in the client
Last modified: 2013-02-17 17:36:43 UTC
When testing on gnome-terminal that has been built in jhbuild on Fedora 18, the server segfaults when I select File>New Profile…. This is the case when building from master as of now. Here is the backtrace:
+ Trace 231528
Should be fixed on master.