profile: Fix crash when cloning a profile

https://bugzilla.gnome.org/show_bug.cgi?id=694016